--- a/courses/pcmi/2010/teran/notes/lecture3.tex
+++ b/courses/pcmi/2010/teran/notes/lecture3.tex
@@ -45,20 +45,12 @@ where $I_1$ and $I_2$ are deviatoric isotropic invariants of the strain, $\lambd
 active and passive muscle fiber response. $F_2$ must take into account the muscle fiber direction $\bfa_0$, the deviatoric stretch in the along-fiber direction $\lambda$, the nonlinear stress-stretch relationship in muscle, and the activation level $\alpha$. The tension produced in a fiber is directed along the vector tangent to the fiber direction. The relationship between the stress in the muscle and the fiber stretch has been established using single-fiber experiments and then normalized to represent any muscle fiber.
 
 The diagonalized FEM framework is most naturally formulated in terms of a first Piola-Kirchoff stress. A stress of this type corresponding to the above constitutive model has the form
-\begin{subequations}
-\begin{equation*}
-\bfP = w_{12} \bfF - w_2 \bfF^3 + \left( p - p_f \right) \bfF^{-1} + 4 J_{cc} T \left( \bfF \bff_m \right) \bff_m^T
-\end{equation*}
-\begin{equation*}
-J_c = \det \left( \bfF \right)^{-1/3}, \quad J_{cc} = J_c^2, \quad I_1 = J_{cc} \bfC, \quad \lambda = \sqrt{\bff_m^T \bfC \bff_m}
-\end{equation*}
-\begin{equation*}
-w_1 = 4 J_{cc} \text{mat}_{c1}, \quad w_2 = 4 J_{cc}^2 \text{mat}_{c2}, \quad w_{12} = w_1 + I_1 w_2
-\end{equation*}
-\begin{equation*}
+\begin{gather*}
+\bfP = w_{12} \bfF - w_2 \bfF^3 + \left( p - p_f \right) \bfF^{-1} + 4 J_{cc} T \left( \bfF \bff_m \right) \bff_m^T \\
+J_c = \det \left( \bfF \right)^{-1/3}, \quad J_{cc} = J_c^2, \quad I_1 = J_{cc} \bfC, \quad \lambda = \sqrt{\bff_m^T \bfC \bff_m} \\
+w_1 = 4 J_{cc} \text{mat}_{c1}, \quad w_2 = 4 J_{cc}^2 \text{mat}_{c2}, \quad w_{12} = w_1 + I_1 w_2 \\
 p = K \log(J), \quad p_f = \frac{1}{3} \left( w_{12} \operatorname{tr} \left( \bfC \right) - w_2 \operatorname{tr} \left( \bfC^2 \right) + T \lambda^2 \right).
-\end{equation*}
-\end{subequations}
+\end{gather*}
 Here, $\bfF$ is the deformation gradient, $\bfC = \bfF^T \bfF$ is the Cauchy strain, and $\bff_m$ is the local fiber direction (in material coordinates). $\text{mat}_{c1}$ and $\text{mat}_{c2}$ are Mooney-Rivlin material parameters and $K$ is the bulk modulus. $T$ is the tension in the fiber direction from the force length curve. Typical values for these parameters are:
 \begin{align*}
 \text{mat}_{c1} & = 30000 \text{Pa} \quad \text{(muscle)}, \\
