--- a/courses/ucla/2011-2012/fall/math269a/homework1/solutions.tex
+++ b/courses/ucla/2011-2012/fall/math269a/homework1/solutions.tex
@@ -237,7 +237,7 @@ with the leap frog method. Use the forward Euler method for the first step. (a) 
 
 {\bf Solution}
 
-One easy way to do this is to plot $z(\theta)$, where $z(\theta)$ is defined implitly as the solution to $P(z(\theta)) = e^{i \theta}$, $\theta \in [0, 2\pi]$.
+One easy way to do this is to plot $z(\theta)$, where $z(\theta)$ is defined implicitly as the solution to $P(z(\theta)) = e^{i \theta}$, $\theta \in [0, 2\pi]$.
 
 \end{itemize}
 
