--- a/courses/ucla/2011-2012/winter/math269b/final/final.tex
+++ b/courses/ucla/2011-2012/winter/math269b/final/final.tex
@@ -65,7 +65,7 @@ Show that when $\mu$ is constant, as $k$ and $h$ tend to zero, the scheme is inc
 \begin{equation*}
 \alpha_1 + 4 \alpha_2 = b \mu.
 \end{equation*}
-Show that the scheme is fourth-order accurate in $x$ is $\alpha_2 = -\alpha_1 / 16$.
+Show that the scheme is fourth-order accurate in $x$ if $\alpha_2 = -\alpha_1 / 16$.
 
 \end{itemize}
 
