--- a/courses/pcmi/2010/teran/notes/notes.tex
+++ b/courses/pcmi/2010/teran/notes/notes.tex
@@ -1,4 +1,5 @@
-\documentclass[lectures, draft]{pcms-l}
+\documentclass[lectures]{pcms-l}
+%\documentclass[lectures, draft]{pcms-l}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -67,7 +68,7 @@
 \mainmatter
 
 \LectureSeries[The Mathematics of Image Processing]
-{Simulation of elasticity, biomechanics, and virtual surgery \author{Joseph M. Teran}}
+{Simulation of elasticity, biomechanics, and virtual surgery \author{J. M. Teran \and J. L. Hellrung, Jr. \and J. Hegemann}}
 
 \address{UCLA Mathematics Department, Box 951555, Los Angeles, CA 90095-1555}
 \email{jteran@math.ucla.edu}
