minor update to the final

--- a/courses/ucla/2011-2012/winter/math269b/final/final.tex
+++ b/courses/ucla/2011-2012/winter/math269b/final/final.tex
@@ -45,7 +45,7 @@ v_t + v v_x = 0, \quad v(0,x) = v_0(x) := a u_0(x) + b.
 \begin{equation*}
 u_0(x) := \begin{cases} u^L_0(x) := a_L x + b_L, & x < 0 \\ u^R_0(x) := a_R x + b_R, & x > 0 \end{cases}.
 \end{equation*}
-Determine the path $t \mapsto \left( t, x_S(t) \right)$ of the (physically correct) shock in the solution $u$ to \eqref{eq:burgers.strong} eminating from $(t,x) = (0,0)$. You may use the fact that
+Determine the path $t \mapsto \left( t, x_S(t) \right)$ of the (physically correct) shock in the solution $u$ to \eqref{eq:burgers.strong} eminating from $(t,x) = (0,0)$ (assume $b_L \geq b_R$). You may use the fact that
 \begin{equation*}
 \frac{1}{2} \int \frac{b_L + b_R + \left( a_L b_R + a_R b_L \right) t}{\left( \left( 1 + a_L t \right) \left( 1 + a_R t \right) \right)^{3/2}} dt = \frac{\left( a_L b_R - a_R b_L \right) t + \left( b_R - b_L \right)}{\left( a_R - a_L \right) \sqrt{\left( 1 + a_L t \right) \left( 1 + a_R t \right)}} \quad \left[ a_L \neq a_R \right].
 \end{equation*}
